feat: 💄 Add some minimal reset CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Edges</title>
 	</head>
-	<body id="home">
+	<body id="home" style="margin: 0; padding: 0">
 		<canvas id="myCanvas" width="1200" height="800"></canvas>
 		<script src="edges.js"></script>
 	</body>
