--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Edges</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body id="home" style="overflow: hidden; margin: 0; padding: 0">
-		<canvas id="myCanvas" width="1200" height="800"></canvas>
+		<div class="appcontainer">
+			<div class="panel">
+				<button onClick="toggleMenu()">
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+				</button>
+				<div id="panelcontent" class="hidden">
+					<div class="control">
+						<label for="densityslider">Density</label><br>
+						<input type="range" min="4000" max="25000" value="10000" step="1000" class="slider" id="densityslider">
+					</div>
+					<div class="control">
+						<label for="speedslider">Slowdown</label><br>
+						<input type="range" min="1" max="20" value="8" class="slider" id="speedslider">
+					</div>
+				</div>
+			</div>
+			<canvas id="myCanvas" width="1200" height="800"></canvas>
+		</div>
+
 		<script src="edges.js"></script>
 	</body>
 </html>
